--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,6 @@ matplotlib==3.5.0
 numpy==1.21.3
 scikit_learn==1.0.2
 torch==1.10.0+cu113
+IQA_pytorch==0.1
+torchmetrics==0.7.0
 git+https://github.com/VLL-HD/FrEIA.git
