--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,6 @@ scikit_learn==1.0.2
 torch==1.10.0+cu113
 IQA_pytorch==0.1
 torchmetrics==0.7.0
+torch-fidelity==0.3.0
 git+https://github.com/VLL-HD/FrEIA.git
+git+https://github.com/sanghyun-son/bicubic_pytorch.git
