--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /ignoring
 /mnist_generation/networks/__pycache__/*
 /mnist_generation/__pycache__
+/output
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
