--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,18 @@
-matplotlib==3.5.0
-numpy==1.21.3
-scikit_learn==1.0.2
-torch==1.10.0+cu113
-IQA_pytorch==0.1
+matplotlib
+numpy
+scikit_learn
+
+--find-links https://download.pytorch.org/whl/cu113/torch_stable.html
+torch==1.10.2+cu113
+torchvision==0.11.3+cu113
+torchaudio===0.10.2+cu113
+
 torchmetrics==0.7.0
 torch-fidelity==0.3.0
+
+IQA_pytorch==0.1
 wandb
 git+https://github.com/VLL-HD/FrEIA.git
-git+https://github.com/Coloquinte/torchSR.git
+git+https://github.com/mgm52/torchSR.git
+
+opencv-python
