--- a/image_rescaling/sweep.yaml
+++ b/image_rescaling/sweep.yaml
@@ -1,32 +1,36 @@
 program: image_rescaling/main.py
 method: bayes
 metric:
-  goal: minimize
+  goal: maximize
   name: test_ssim_y
 parameters:
   initial_learning_rate:
-    max: 0.01
-    min: 0.00001
-    distribution: uniform
+    max: -2
+    min: -12
+    distribution: log_uniform
   lambda_recon:
-    max: 200
-    min: 0.01
-    distribution: uniform
+    value: 1
   lambda_guide:
-    max: 200
-    min: 0.01
-    distribution: uniform
+    values: [12, 16, 20]
   lambda_distr:
-    max: 200
-    min: 0.01
-    distribution: uniform
+    max: 6
+    min: -6
+    distribution: log_uniform
   inv_per_ds:
-    max: 10
-    min: 2
-    distribution: int_uniform
+    value: 8
+  inv_first_level_extra:
+    value: 0
+  inv_final_level_extra:
+    value: 0
+  grad_clipping:
+    max: 2.4
+    min: -4.8
+    distribution: log_uniform
   batch_size:
-    max: 16
-    min: 4
-    distribution: int_uniform
+    values: [4, 8, 12, 16]
   img_size:
-    values: [16, 64, 144, 256]
+    values: [64, 144]
+  fast_gpu_testing:
+    value: True
+  quantize_recon_loss:
+    values: [True, False]
