--- a/image_rescaling/irn_4x_fast.yaml
+++ b/image_rescaling/irn_4x_fast.yaml
@@ -5,6 +5,7 @@ inv_first_level_extra: 0
 inv_final_level_extra: 0
 batchnorm: False
 img_size: 144
+actnorm: False
 
 # Training
 batch_size: 16
@@ -18,6 +19,7 @@ lr_batch_milestones: [25000, 50000, 75000, 100000]
 lr_gamma: 0.5
 mean_losses: False
 quantize_recon_loss: False
+quantize_guide_loss: False # currently not used
 
 # Training output
 max_batches: -1
