--- a/image_rescaling/irn_4x_og_actnorm.yaml
+++ b/image_rescaling/irn_4x_og_actnorm.yaml
@@ -5,7 +5,7 @@ inv_first_level_extra: 0
 inv_final_level_extra: 0
 batchnorm: False
 img_size: 144
-actnorm: False
+actnorm: True
 
 # Training
 batch_size: 16
@@ -14,7 +14,7 @@ lambda_guide: 16
 lambda_distr: 1
 initial_learning_rate: 0.0002
 seed: 10
-grad_clipping: 2
+grad_clipping: 10
 lr_batch_milestones: [100000, 200000, 300000, 400000]
 lr_gamma: 0.5
 mean_losses: False
