--- a/image_rescaling/irn_4x_hcflow_gradnorm5.yaml
+++ b/image_rescaling/irn_4x_hcflow_gradnorm5.yaml
@@ -10,15 +10,15 @@ actnorm: False
 # Training
 batch_size: 16
 lambda_recon: 1
-lambda_guide: 16 #0.05
-lambda_distr: 1 #0.00001 #<- unstable
+lambda_guide: 0.05
+lambda_distr: 0.00001 #<- unstable
 initial_learning_rate: 0.00025
 seed: 10
-grad_clipping: 10
-grad_value_clipping: null
-lr_batch_milestones: [92000, 200000, 300000, 400000, 450000]
+grad_clipping: 5
+grad_value_clipping: 100
+lr_batch_milestones: [100000, 200000, 300000, 400000, 450000]
 lr_gamma: 0.5
-mean_losses: False
+mean_losses: True
 quantize_recon_loss: False
 quantize_guide_loss: False # currently not used
 
