--- a/image_rescaling/irn_4x_og.yaml
+++ b/image_rescaling/irn_4x_og.yaml
@@ -15,6 +15,7 @@ lambda_distr: 1
 initial_learning_rate: 0.0002
 seed: 10
 grad_clipping: 10
+grad_value_clipping: null
 lr_batch_milestones: [100000, 200000, 300000, 400000]
 lr_gamma: 0.5
 mean_losses: False
