--- a/image_rescaling/irn_4x_hcflow.yaml
+++ b/image_rescaling/irn_4x_hcflow.yaml
@@ -6,6 +6,7 @@ inv_final_level_extra: 0
 batchnorm: False
 img_size: 160
 actnorm: False
+zerosample: False
 
 # Training
 batch_size: 16
@@ -23,7 +24,7 @@ quantize_recon_loss: False
 quantize_guide_loss: False # currently not used
 
 # Training output
-max_batches: 500000
+max_batches: 525000
 max_epochs: -1
 target_loss: -1
 epochs_between_tests: 100
