--- a/image_rescaling/irn_4x_og_2tight.yaml
+++ b/image_rescaling/irn_4x_og_2tight.yaml
@@ -7,6 +7,9 @@ batchnorm: False
 img_size: 144
 actnorm: False
 zerosample: False
+clamp: 1.0
+clamp_min: -1.0
+clamp_tightness: 2.0
 
 # Training
 batch_size: 16
@@ -15,7 +18,8 @@ lambda_guide: 16
 lambda_distr: 1
 initial_learning_rate: 0.0002
 seed: 10
-grad_clipping: 2
+grad_clipping: 10
+grad_value_clipping: null
 lr_batch_milestones: [100000, 200000, 300000, 400000]
 lr_gamma: 0.5
 mean_losses: False
@@ -23,11 +27,11 @@ quantize_recon_loss: False
 quantize_guide_loss: False # currently not used
 
 # Training output
-max_batches: 500000
+max_batches: 525000
 max_epochs: -1
 target_loss: -1
 epochs_between_tests: 100
-epochs_between_training_log: 0.2
+epochs_between_training_log: 1
 epochs_between_samples: 25
 epochs_between_saves: 10
 
