--- a/image_rescaling/irn_4x_hcflow.yaml
+++ b/image_rescaling/irn_4x_hcflow.yaml
@@ -22,6 +22,9 @@ lr_gamma: 0.5
 mean_losses: False
 quantize_recon_loss: False
 quantize_guide_loss: False # currently not used
+y_channel_usage: 0
+epochs_between_flip_loss: null
+flip_loss_scale: null
 
 # Training output
 max_batches: 525000
