--- a/image_rescaling/irn_4x_og_zerosample.yaml
+++ b/image_rescaling/irn_4x_og_zerosample.yaml
@@ -22,6 +22,8 @@ lr_gamma: 0.5
 mean_losses: False
 quantize_recon_loss: False
 quantize_guide_loss: False # currently not used
+epochs_between_flip_loss: null
+flip_loss_scale: null
 
 # Training output
 max_batches: 525000
