--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,17 @@
 /ignoring
 /mnist_generation/networks/__pycache__/*
 /mnist_generation/__pycache__
+/.VSCodeCounter
 /image_rescaling/data
+/image_rescaling/remote/wandb/runs/*
+/image_rescaling/remote/wandb/sweeps/*
 /wandb
 /image_rescaling/wandb
-/image_rescaling/output
-/image_rescaling/saved_models
+/image_rescaling/output/debug/*
+/image_rescaling/output/test/*
+/image_rescaling/docs/*
+/image_rescaling/output/training/*
+/image_rescaling/models/*
 /image_rescaling/wandb
 /image_rescaling/debug_imgs
 machine.file.*
