--- a/image_rescaling/configs/compression/irn_4x_og_2tight_compression.yaml
+++ b/image_rescaling/configs/compression/irn_4x_og_2tight_compression.yaml
@@ -5,6 +5,14 @@ inv_first_level_extra: 0
 inv_final_level_extra: 0
 batchnorm: False
 img_size: 144
+actnorm: False
+zerosample: False
+clamp: 1.0
+clamp_min: -1.0
+clamp_tightness: 2.0
+compression_mode: True
+compression_quality: -1
+sr_mode: False
 
 # Training
 batch_size: 16
@@ -14,19 +22,24 @@ lambda_distr: 1
 initial_learning_rate: 0.0002
 seed: 10
 grad_clipping: 10
-lr_batch_milestones: [100000, 200000, 300000, 400000]
+grad_value_clipping: null
+lr_batch_milestones: [100000, 200000, 300000, 400000, 501450]
 lr_gamma: 0.5
 mean_losses: False
 quantize_recon_loss: False
+quantize_guide_loss: False # currently not used
+y_channel_usage: 0
 
 # Training output
-max_batches: -1
+max_batches: 1525000
 max_epochs: -1
 target_loss: -1
 epochs_between_tests: 100
-epochs_between_training_log: 0.2
+epochs_between_training_log: 1
 epochs_between_samples: 25
 epochs_between_saves: 10
+epochs_between_flip_loss: null
+flip_loss_scale: null
 
 # Testing
 full_size_test_imgs: True
