--- a/image_rescaling/configs/misc/irn_4x_og_stamp1.yaml
+++ b/image_rescaling/configs/misc/irn_4x_og_stamp1.yaml
@@ -9,7 +9,8 @@ actnorm: False
 zerosample: False
 clamp: 1.0
 clamp_min: -1.0
-clamp_tightness: 2.0
+clamp_tightness: 1.0
+sr_mode: False
 
 # Training
 batch_size: 16
@@ -26,6 +27,9 @@ mean_losses: False
 quantize_recon_loss: False
 quantize_guide_loss: False # currently not used
 y_channel_usage: 0
+epochs_between_flip_loss: null
+flip_loss_scale: null
+stamp_size: 1
 
 # Training output
 max_batches: 525000
@@ -33,7 +37,7 @@ max_epochs: -1
 target_loss: -1
 epochs_between_tests: 100
 epochs_between_training_log: 1
-epochs_between_samples: 25
+epochs_between_samples: 5
 epochs_between_saves: 10
 
 # Testing
