--- a/image_rescaling/configs/clamp/irn_4x_og_signclamp.yaml
+++ b/image_rescaling/configs/clamp/irn_4x_og_signclamp.yaml
@@ -1,15 +1,21 @@
 # Model
-scale: 2 # no. downsampling layers = log2(scale)
+scale: 4 # no. downsampling layers = log2(scale)
 inv_per_ds: 8
 inv_first_level_extra: 0
 inv_final_level_extra: 0
 batchnorm: False
-img_size: 64
+img_size: 144
 actnorm: False
+zerosample: False
+clamp: 1.0
+clamp_min: -1.0 # modified clamp: encourage stability by avoiding low values
+clamp_tightness: 1.0
+compression_mode: False
 sr_mode: False
+clamp_signcut: True
 
 # Training
-batch_size: 32
+batch_size: 16
 lambda_recon: 1
 lambda_guide: 16
 lambda_distr: 1
@@ -17,20 +23,23 @@ initial_learning_rate: 0.0002
 seed: 10
 grad_clipping: 10
 grad_value_clipping: null
-lr_batch_milestones: [25000, 50000, 75000, 100000]
+lr_batch_milestones: [100000, 200000, 300000, 400000]
 lr_gamma: 0.5
 mean_losses: False
 quantize_recon_loss: False
 quantize_guide_loss: False # currently not used
+y_channel_usage: 0
+epochs_between_flip_loss: null
+flip_loss_scale: null
 
 # Training output
-max_batches: 500000
+max_batches: 525000
 max_epochs: -1
 target_loss: -1
-epochs_between_tests: 2
-epochs_between_training_log: 0.2
-epochs_between_samples: 2
-epochs_between_saves: 2
+epochs_between_tests: 100
+epochs_between_training_log: 1
+epochs_between_samples: 25
+epochs_between_saves: 10
 
 # Testing
 full_size_test_imgs: True
